--- a/Project Final Vispro/Project Final Vispro.csproj
+++ b/Project Final Vispro/Project Final Vispro.csproj
@@ -67,11 +67,23 @@
     <Compile Include="FormLogin.Designer.cs">
       <DependentUpon>FormLogin.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmJadwal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmJadwal.Designer.cs">
+      <DependentUpon>FrmJadwal.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMain.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="FrmMain.Designer.cs">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmNilai.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmNilai.Designer.cs">
+      <DependentUpon>FrmNilai.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -84,8 +96,14 @@
     <EmbeddedResource Include="FrmAdmin.resx">
       <DependentUpon>FrmAdmin.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FrmJadwal.resx">
+      <DependentUpon>FrmJadwal.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FrmMain.resx">
       <DependentUpon>FrmMain.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmNilai.resx">
+      <DependentUpon>FrmNilai.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
